# clipd

./: .gitignore  Cargo.toml  README.md
.githooks/: post-commit  prepare-commit-msg
.github/workflows/: release.yml
configs/launchd/: dev.thmsn.clipd.plist
configs/systemd/: clipd.service
configs/windows/: clipd-task.xml
scripts/: Install.bat  Install.ps1  InstallRelease.bat  InstallRelease.ps1  cov.sh  install_macos.sh  install_release_linux.sh  install_release_macos.sh  install_systemd.sh
src/: config.rs  main.rs
src/strategies/: domain.rs  mod.rs  regex.rs
