[package]
name = "clipd"
version = "0.1.1"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
clipboard = "0.5.0"
regex = "1.12.3"
serde = { version = "1.0.228", features = ["derive"] }
libpath = { git = "https://github.com/charliethomson/libpath" }
libproduct = { git = "https://github.com/charliethomson/libpath" }
libconfig = { git = "https://github.com/charliethomson/libconfig" }
clap = { version = "4.6.0", features = ["derive"] }
tokio = { version = "1.50.0", features = ["full"] }
url = "2.5.8"
tracing = "0.1.44"
tracing-subscriber = "0.3.23"

[target.'cfg(target_os = "macos")'.dependencies]
objc2-app-kit = { version = "0.3.2", features = ["NSPasteboardItem"] }
