[package]
name = "clipd"
version = "0.3.2"
edition = "2024"
description = "A clipboard daemon that watches and transforms clipboard contents using configurable rules."

[dependencies]
anyhow = "1.0.102"
clippers = "0.1.2"
regex = "1.12.3"
serde = { version = "1.0.228", features = ["derive"] }
libpath = { git = "https://github.com/charliethomson/libpath" }
libproduct = { git = "https://github.com/charliethomson/libpath" }
libconfig = { git = "https://github.com/charliethomson/libconfig" }
clap = { version = "4.6.0", features = ["derive"] }
tokio = { version = "1.50.0", features = ["full"] }
url = "2.5.8"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
tracing-appender = "0.2.4"

